--- a/courses.html
+++ b/courses.html
@@ -60,6 +60,7 @@
 			          <li><a href="index.html">Home</a></li>
 			          <li><a href="about.html">About</a></li>
 			          <li><a href="courses.html">Courses</a></li>
+					  <li><a href="faculty.html">Faculty</a></li>
 			          <li><a href="events.html">Events</a></li>
 			          <li><a href="gallery.html">Gallery</a></li>
 			          <li class="menu-has-children"><a href="">Blog</a>
