--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
 			}
 		</style>
 	</head>
-	<body class="wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;"></body>
+	<body class="wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
 	  <header id="header" id="home">
 		  <div class="header-top">
 			  <div class="container">
@@ -99,6 +99,7 @@
 				  <li><a href="index.html">Home</a></li>
 				  <li><a href="about.html">About</a></li>
 				  <li><a href="medium.html">Medium</a></li>
+				  <li><a href="faculty.html">Faculty</a></li>
 				  <li><a href="events.html">Events</a></li>
 				  <li><a href="gallery.html">Gallery</a></li>
 				  <li class="menu-has-children"><a href="">Blog/News</a>
