--- a/medium.html
+++ b/medium.html
@@ -80,7 +80,7 @@
 		<div class="container main-menu">
 			<div class="row align-items-center justify-content-between d-flex">
 			  <div id="logo">
-				<a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+				<a href="index.html"><img src="img/mkes.jpg" height="40px" width="70px" alt="" title="" /></a>
 			  </div>
 			  <nav id="nav-menu-container">
 				<ul class="nav-menu">
@@ -89,13 +89,13 @@
 				  <li><a href="medium.html">Medium</a></li>
 				  <li><a href="faculty.html">Faculty</a></li>
 				  <li><a href="events.html">Events</a></li>
-				  <li><a href="gallery.html">Gallery</a></li>
-				  <li class="menu-has-children"><a href="">Blog/News</a>
+				  <li><a href="campus.html">Campus</a></li>
+				  <!-- <li class="menu-has-children"><a href="">Blog/News</a>
 					<ul>
 					  <li><a href="blog-home.html">News</a></li>
 					  <li><a href="blog-single.html">Blog</a></li>
 					</ul>
-				  </li>	
+				  </li>	 -->
 				  <li class="menu-has-children"><a href="">Admission</a>
 					<ul>
 						  <li><a href="admission.html">Admission Details</a></li>		
@@ -384,7 +384,7 @@
 			</section>
 			<!-- End search-course Area -->			
 
-			<!-- Start upcoming-event Area -->
+			<!-- Start upcoming-event Area 
 			<section class="upcoming-event-area section-gap">
 				<div class="container">
 					<div class="row d-flex justify-content-center">
@@ -479,6 +479,7 @@
 					</div>
 				</div>	
 			</section>
+		-->
 			<!-- End upcoming-event Area -->				
 
 			<!-- Start cta-two Area -->
@@ -565,8 +566,8 @@
 						</div>											
 					</div>
 					<div class="footer-bottom row align-items-center justify-content-between">
-						<p class="footer-text m-0 col-lg-6 col-md-12"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+						<p class="footer-text m-0 col-lg-6 col-md-12"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>-->
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 						<div class="col-lg-6 col-sm-12 footer-social">
 							<a href="#"><i class="fa fa-facebook"></i></a>
