--- a/event-details.html
+++ b/event-details.html
@@ -60,9 +60,8 @@
 			          <li><a href="index.html">Home</a></li>
 			          <li><a href="about.html">About</a></li>
 			          <li><a href="courses.html">Courses</a></li>
-					  <li><a href="faculty.html">Faculty</a></li>
 			          <li><a href="events.html">Events</a></li>
-			          <li><a href="gallery.html">Gallery</a></li>
+			          <li><a href="campus.html">Campus</a></li>
 			          <li class="menu-has-children"><a href="">Blog</a>
 			            <ul>
 			              <li><a href="blog-home.html">Blog Home</a></li>
