--- a/admission.html
+++ b/admission.html
@@ -145,8 +145,8 @@
 	                                <div class="jq-tab-title active" data-tab="1">Category</div>
 	                                <div class="jq-tab-title" data-tab="2">Eligibility</div>
 	                                <div class="jq-tab-title" data-tab="3">Process</div>
-	                                <div class="jq-tab-title" data-tab="4">Comments</div>
-	                                <div class="jq-tab-title" data-tab="5">Reviews</div>
+	                                <!-- <div class="jq-tab-title" data-tab="4">Comments</div>
+	                                <div class="jq-tab-title" data-tab="5">Reviews</div> -->
 	                            </div>
 	                            <div class="jq-tab-content-wrapper">
 	                                <div class="jq-tab-content active" data-tab="1">
@@ -204,7 +204,7 @@
 
 										</ul>
 	                                </div>
-	                                <div class="jq-tab-content comment-wrap" data-tab="4">
+	                                <!-- <div class="jq-tab-content comment-wrap" data-tab="4">
 						                <div class="comments-area">
 						                    <h4>05 Comments</h4>
 						                    <div class="comment-list">
@@ -436,7 +436,7 @@
 	                        </div>
 						</div>
 						<div class="col-lg-4 right-contents">
-							<!-- <ul>
+							 <ul>
 								<li>
 									<a class="justify-content-between d-flex" href="#">
 										<p>Trainer’s Name</p> 
@@ -461,16 +461,16 @@
 										<span>2.00 pm to 4.00 pm</span>
 									</a>
 								</li>
-							</ul> -->
+							</ul> 
 							<a href="#" class="primary-btn text-uppercase">Enroll for admission</a>
 						</div>
 					</div>
 				</div>	
 			</section>
-			<!-- End course-details Area -->
+			 End course-details Area 
 			<br>
 
-			<!-- Start popular-courses Area --> 
+			 Start popular-courses Area 
 			<section class="search-course-area relative">
 				<div class="overlay overlay-bg"></div>
 				<div class="container">
@@ -506,7 +506,7 @@
 									<br>					
 								</div>								
 							</div>
-						</div>
+						</div> -->
 						<div class="col-lg-4 col-md-6 search-course-right section-gap">
 							<!-- <form class="form-wrap" action="#">
 								<h4 class="text-white pb-20 text-center mb-30">Search for Available Course</h4>		
@@ -551,10 +551,10 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-8 cta-left">
-							<h1>Not Yet Satisfied with our Trend?</h1>
+							<h1>Admission Queries?</h1>
 						</div>
 						<div class="col-lg-4 cta-right">
-							<a class="primary-btn wh" href="#">view our blog</a>
+							<a class="primary-btn wh" href="#">Visit our page<a href="admission.html"></a></a>
 						</div>
 					</div>
 				</div>	
