--- a/event-details.html
+++ b/event-details.html
@@ -202,10 +202,10 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-8 cta-left">
-							<h1>Not Yet Satisfied with our Trend?</h1>
+							<h1>Admission Queries?</h1>
 						</div>
 						<div class="col-lg-4 cta-right">
-							<a class="primary-btn wh" href="#">view our blog</a>
+							<a class="primary-btn wh" href="#">Visit our page<a href="admission.html"></a></a>
 						</div>
 					</div>
 				</div>	
