--- a/contact.html
+++ b/contact.html
@@ -122,12 +122,29 @@
 			<!-- End banner Area -->				  
 
 			<!-- Start contact-page Area -->
+			
 			<section class="contact-page-area section-gap">
 				<div class="container">
 					<div class="row">
+						<div class="col-lg-12">
+							<h1>Want directions?</h1>
+							<br><br>
+						</div>
+						<!--
+						<div class="col-lg-12 text-center">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.0510605189484!2d72.84439407466795!3d19.192972048291093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b6e13dd11bb9%3A0x3913cea4a109d010!2sN.L.%20High%20School!5e0!3m2!1sen!2sin!4v1704373066508!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+							</iframe><br>
+						</div>-->
+						
+						<div class="col-lg-12 text-center">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.0510605189484!2d72.84439407466795!3d19.192972048291093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b6e13dd11bb9%3A0x3913cea4a109d010!2sN.L.%20High%20School!5e0!3m2!1sen!2sin!4v1704373066508!5m2!1sen!2sin&dir=ltr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							<br><br><br>
+						</div>
+
+						<!---
 						<div class="map-wrap" style="width:100%; height: 445px;" id="map">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.0510605189484!2d72.84439407466795!3d19.1929720482911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b6e13dd11bb9%3A0x3913cea4a109d010!2sN.L.%20High%20School!5e0!3m2!1sen!2sin!4v1704287228718!5m2!1sen!2sin" width="100%" height="445" frameborder="0" style="border:0;" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
-							</div>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.397206164867!2d72.86023377466549!3d19.090222951526993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c85099bd2947%3A0x1ecc1a60c474a8ae!2sChhatrapati%20Shivaji%20Maharaj%20International%20Airport!5e0!3m2!1sen!2sin!4v1704353772009!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						</div>-->
 							<!-- Replace the following link with your map link 
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.0510605189484!2d72.84439407466795!3d19.1929720482911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b6e13dd11bb9%3A0x3913cea4a109d010!2sN.L.%20High%20School!5e0!3m2!1sen!2sin!4v1704287228718!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 						</div>
@@ -259,7 +276,8 @@
 					</div>
 				 <div class="footer-bottom row align-items-center justify-content-between">
 						<!--	<p class="footer-text m-0 col-lg-6 col-md-12"><Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
+ | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
  Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </p> -->
 						<div class="col-lg-6 col-sm-12 footer-social">
 							<a href="#"><i class="fa fa-facebook"></i></a>
@@ -287,7 +305,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/owl.carousel.min.js"></script>									
 			<script src="js/mail-script.js"></script>	
 			<script src="js/main.js"></script>
-			
+			<!--
 			<script type="text/javascript">
 				function googleTranslateElementInit() {
 					new google.translate.TranslateElement(
@@ -300,5 +318,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script type="text/javascript"
 					src= "https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
 			</script>
+			-->
 		</body>
 	</html>
