--- a/campus.html
+++ b/campus.html
@@ -92,7 +92,7 @@
 		<div class="container main-menu">
 			<div class="row align-items-center justify-content-between d-flex">
 			  <div id="logo">
-				<a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+				<a href="index.html"><img src="img/mkes.jpg" height="40px" width="70px" alt="" title="" /></a>
 			  </div>
 			  <nav id="nav-menu-container">
 				<ul class="nav-menu">
@@ -101,29 +101,29 @@
 				  <li><a href="medium.html">Medium</a></li>
 				  <li><a href="faculty.html">Faculty</a></li>
 				  <li><a href="events.html">Events</a></li>
-				  <li><a href="gallery.html">Gallery</a></li>
-				  <li class="menu-has-children"><a href="">Blog/News</a>
+				  <li><a href="campus.html">Campus</a></li>
+				  <!-- <li class="menu-has-children"><a href="">Blog/News</a>
 					<ul>
 					  <li><a href="blog-home.html">News</a></li>
 					  <li><a href="blog-single.html">Blog</a></li>
 					</ul>
-				  </li>	
+				  </li>	 -->
 				  <li class="menu-has-children"><a href="">Admission</a>
 					<ul>
 						  <li><a href="admission.html">Admission Details</a></li>		
 						  <!-- <li><a href="event-details.html">Event Details</a></li>		 -->
 						<!-- <li><a href="elements.html">Elements</a></li> -->
-						  <li class="menu-has-children"><a href="">Eligiblity Details </a>
+						  <!-- <li class="menu-has-children"><a href="">Eligiblity Details </a>
 							<ul>
 							  <li><a href="#">Jr. KG</a></li>
 							  <li><a href="#">1st to 10th</a></li>
 							</ul>
-						  </li>					                		
+						  </li>					                		 -->
 					</ul>
 				  </li>					          					          		          
 				  <li><a href="contact.html">Contact</a></li>
 				</ul>
-			  </nav><!-- #nav-menu-container -->		    		
+			  </nav><!-- #nav-menu-container -->	    		
 			</div>
 		</div>
 	  </header><!-- #header -->
@@ -135,9 +135,9 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								Gallery				
+								Campus				
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="gallery.html"> Gallery</a></p>
+							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="gallery.html"> Campus</a></p>
 						</div>	
 					</div>
 				</div>
