--- a/contact.html
+++ b/contact.html
@@ -76,30 +76,31 @@
 				  <li><a href="index.html">Home</a></li>
 				  <li><a href="about.html">About</a></li>
 				  <li><a href="medium.html">Medium</a></li>
+				  <li><a href="faculty.html">Faculty</a></li>
 				  <li><a href="events.html">Events</a></li>
 				  <li><a href="campus.html">Campus</a></li>
-				  <li class="menu-has-children"><a href="">Blog/News</a>
+				  <!-- <li class="menu-has-children"><a href="">Blog/News</a>
 					<ul>
 					  <li><a href="blog-home.html">News</a></li>
 					  <li><a href="blog-single.html">Blog</a></li>
 					</ul>
-				  </li>	
+				  </li>	 -->
 				  <li class="menu-has-children"><a href="">Admission</a>
 					<ul>
 						  <li><a href="admission.html">Admission Details</a></li>		
-		              		<!-- <li><a href="event-details.html">Event Details</a></li>		 -->
-			                <!-- <li><a href="elements.html">Elements</a></li> -->
-					          <li class="menu-has-children"><a href="">Eligiblity Details </a>
-					            <ul>
-					              <li><a href="#">Jr. KG</a></li>
-					              <li><a href="#">1st to 10th</a></li>
-					            </ul>
-					          </li>					                		
-			            </ul>
-			          </li>					          					          		          
-			          <li><a href="contact.html">Contact</a></li>
-			        </ul>
-			      </nav><!-- #nav-menu-container -->		    		
+						  <!-- <li><a href="event-details.html">Event Details</a></li>		 -->
+						<!-- <li><a href="elements.html">Elements</a></li> -->
+						  <!-- <li class="menu-has-children"><a href="">Eligiblity Details </a>
+							<ul>
+							  <li><a href="#">Jr. KG</a></li>
+							  <li><a href="#">1st to 10th</a></li>
+							</ul>
+						  </li>					                		 -->
+					</ul>
+				  </li>					          					          		          
+				  <li><a href="contact.html">Contact</a></li>
+				</ul>
+			  </nav><!-- #nav-menu-container -->	    		
 		    	</div>
 		    </div>
 		
