--- a/events.html
+++ b/events.html
@@ -101,12 +101,12 @@
 						  <li><a href="admission.html">Admission Details</a></li>		
 						  <!-- <li><a href="event-details.html">Event Details</a></li>		 -->
 						<!-- <li><a href="elements.html">Elements</a></li> -->
-						  <li class="menu-has-children"><a href="">Eligiblity Details </a>
+						  <!-- <li class="menu-has-children"><a href="">Eligiblity Details </a>
 							<ul>
 							  <li><a href="#">Jr. KG</a></li>
 							  <li><a href="#">1st to 10th</a></li>
 							</ul>
-						  </li>					                		
+						  </li>					                		 -->
 					</ul>
 				  </li>					          					          		          
 				  <li><a href="contact.html">Contact</a></li>
